# tic-tac-ai

./: .gitignore  README.md  TicTacMinimax.py  TicTacToe.py  minimax.py  minimax_example.py  neural_net.py  old_tic.py  readme.md  tic.py
cpp/: CMakeLists.txt  Makefile  README.md  game_rules.cpp  game_rules.h  gui.cpp  gui.h  tic  tic_tac.cpp
cpp/minimax/: Makefile  TicTacMinimax.cpp  game_rules.cpp  game_rules.h  games.cpp  games.h  globals.h  gui.cpp  gui.h  minimax.cpp  minimax.h  tic  tic_tac.cpp
cpp/src/: board.cpp  board.hpp  config.h  config.h.in  game.cpp  main.cpp  minimax.cpp
docs/: cpp.md
gui/: TicTacCurses.py
src/cpp/: CMakeLists.txt  Makefile  TicTacMinimax.cpp  game.h  game_rules.cpp  gamemodes.cpp  games.cpp  gui.h  main.cpp  minimax.cpp
src/cpp/include/: game.h  globals.h  minimax.h
src/cpp/minimax/: Makefile  TicTacMinimax.cpp  game_rules.cpp  game_rules.h  games.cpp  games.h  globals.h  gui.cpp  gui.h  minimax.cpp  minimax.h
src/cpp/src/: CMakeLists.txt  game.cpp  gui.cpp  main.cpp  minimax.cpp
src/cpp/tic-tac-ai/: game.cpp  minimax.cpp
src/python/: TicTacMinimax.py  TicTacToe.py  minimax.py
